# reskyblock

./: .pre-commit-config.yaml  Makefile  pyproject.toml
.github/workflows/: ci.yml
src/reskyblock/: __init__.py  client.py
src/reskyblock/http/: __init__.py
src/reskyblock/models/: auctions.py  auctions_ended.py
src/reskyblock/nbt/: decoder.py
src/reskyblock/serialization/: json.py
tests/: test_client.py  test_mock_client.py
tests/data/: auctions.json  auctions2.json  auctions_ended.json  bazaar.json  item_bytes.txt
