[project]
name = "reskyblock"
version = "0.1.0"
description = "Python API wrapper for Hypixel SkyBlock"
authors = [
    {name = "ch-iv", email = "alicesummer38@gmail.com"},
]
dependencies = []
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
test = [
    "pytest>=8.0.1",
]
lint = [
    "pre-commit>=3.6.1",
    "ruff>=0.2.1",
    "mypy>=1.8.0",
    "slotscheck>=0.17.3",
]
